tests/baselines/reference/computedPropertyNames11_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames11_ES5.ts(5,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames11_ES5.ts(5,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames11_ES5.ts(6,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames11_ES5.ts(6,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames11_ES5.ts(7,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames11_ES5.ts(7,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames11_ES5.ts(8,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames11_ES5.ts(8,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames11_ES5.ts(9,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames11_ES5.ts(9,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames11_ES5.ts(10,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames11_ES5.ts(10,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames11_ES5.ts(11,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames11_ES5.ts(11,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames11_ES5.ts(12,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames11_ES5.ts(12,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames11_ES5.ts(13,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames11_ES5.ts(13,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames11_ES5.ts(14,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames11_ES5.ts(14,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames11_ES5.ts(15,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames11_ES5.ts(15,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames11_ES5.ts (22 errors) ====
    var s: string;
    var n: number;
    var a: any;
    var v = {
        get [s]() { return 0; },
            ~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
            ~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        set [n](v) { },
            ~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
            ~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        get [s + s]() { return 0; },
            ~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
            ~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        set [s + n](v) { },
            ~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
            ~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        get [+s]() { return 0; },
            ~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
            ~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        set [""](v) { },
            ~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
            ~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        get [0]() { return 0; },
            ~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
            ~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        set [a](v) { },
            ~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
            ~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        get [<any>true]() { return 0; },
            ~~~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
            ~~~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        set [`hello bye`](v) { },
            ~~~~~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
            ~~~~~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        get [`hello ${a} bye`]() { return 0; }
            ~~~~~~~~~~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
            ~~~~~~~~~~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
    }